tests/baselines/reference/TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.errors.txt
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(2,18): error TS2300: Duplicate identifier 'Point'.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(10,18): error TS2300: Duplicate identifier 'Point'.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(16,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(16,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(16,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(17,18): error TS2300: Duplicate identifier 'Line'.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(22,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(23,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(24,23): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(26,26): error TS2300: Duplicate identifier 'Line'.


==== TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts (12 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Point {
                     ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
            x: number;
            y: number;
        }
    }
    
    module A{
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        // expected error
        export class Point {
                     ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
            origin: number;
            angle: number;
        }
    }
    
    module X.Y.Z {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Line {
                     ~~~~
!!! error TS2300: Duplicate identifier 'Line'.
            length: number;
        }
    }
    
    module X {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module Y {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export module Z {
                          ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                // expected error
                export class Line {
                             ~~~~
!!! error TS2300: Duplicate identifier 'Line'.
                    name: string;
                }
            }
        }
    }
    